--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -22,7 +22,7 @@
 
 .nav a {
     text-decoration: none;
-    color: #0008fc;
+    color: rgb(0, 0, 0);
     text-transform: uppercase;
     font-size: 12px;
     text-align: center;
