--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -8,6 +8,12 @@
     box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25), 0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
 }
 
+.movie :hover {
+    transform: scale(1.15);
+    transition: all 0.5s;
+    opacity: 1;
+}
+
 .movies .movie a {
     display: grid;
     grid-template-columns: minmax(150px, 1fr) 2fr;
