--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -6,6 +6,7 @@
 
 .title {
     position: absolute;
+    left: 40vw;
     display: block;
     font-weight: bolder;
 }
@@ -22,7 +23,7 @@
 .movies {
     display: grid;
     grid-template-columns: repeat(4, minmax(200px, 1fr));
-    grid-gap: 50px;
+    grid-gap: 30px;
     padding: 50px;
     width: 80%;
     padding-top: 70px;
